--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,9 +11,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
+  strategy:
+    matrix:
+        os: [ubuntu-lastest, windows-2016]
+        node-version: [8.x, 10.x]
+
 
     steps:
     - uses: actions/checkout@v2
