--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,8 +11,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
-  strategy:
+    strategy:
     matrix:
+        os: [ubuntu-lastest, windows-2016]
+        node-version: [8.x, 10.x]
+        
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
         os: [ubuntu-lastest, windows-2016]
         node-version: [8.x, 10.x]
 
